--- a/modules-available/rebootcontrol/lang/de/template-tags.json
+++ b/modules-available/rebootcontrol/lang/de/template-tags.json
@@ -1,5 +1,8 @@
 {
     "lang_activeTasks": "Laufende Jobs",
+    "lang_add": "Hinzuf\u00fcgen",
+    "lang_addNewSubnet": "Ein Subnet manuell hinzuf\u00fcgen",
+    "lang_assignedJumpHosts": "Zugewiesene Sprung-Hosts",
     "lang_assignedSubnets": "Subnets",
     "lang_authFail": "Authentifizierung fehlgeschlagen",
     "lang_check": "Testen",
@@ -9,7 +12,10 @@
     "lang_clientCount": "# Clients",
     "lang_connecting": "Verbinde...",
     "lang_editJumpHost": "Sprung-Host bearbeiten",
+    "lang_editSubnet": "Subnet bearbeiten",
     "lang_error": "Nicht erreichbar",
+    "lang_fixSubnetDesc": "Wenn aktiviert, wird die Erreichbarkeit f\u00fcr ideses Subnet nicht mehr automatisch ermittelt. Sie k\u00f6nnen in diesem Fall selber festlegen, ob das Subnet WOL-Pakete vom Satelliten-Server empfangen kann. Au\u00dferdem wird das Subnet bei Setzen dieser Option nicht mehr automatisch aus der Datenbank gel\u00f6scht, wenn 6 Monate lang kein Client in diesem Subnet gesehen wurde.",
+    "lang_fixSubnetSettings": "Subnet-Einstellungen manuell festlegen",
     "lang_genNew": "Neues Schl\u00fcsselpaar generieren",
     "lang_host": "Host",
     "lang_hostDeleteConfirm": "Diesen Sprung-Host l\u00f6schen?",
@@ -17,8 +23,11 @@
     "lang_hostNotReachable": "Host nicht erreichbar",
     "lang_hostReachable": "Host erreichbar",
     "lang_ip": "IP",
+    "lang_isDirect": "Vom Satellit erreichbar",
+    "lang_isFixed": "Manuell konfiguriert",
     "lang_jumpHosts": "Sprung-Hosts",
     "lang_keypairConfirmCheck": "Ich bin sicher",
+    "lang_lastseen": "Zuletzt gesehen",
     "lang_location": "Standort",
     "lang_mode": "Modus",
     "lang_moduleHeading": "WakeOnLAN",
@@ -29,14 +38,25 @@
     "lang_privkey": "Geheimer Schl\u00fcssel",
     "lang_pubKey": "SSH Public Key:",
     "lang_reachable": "Erreichbar",
+    "lang_reachableFrom": "Erreichbar von",
+    "lang_reachableFromServer": "Erreichbar vom Satelliten-Server",
+    "lang_reachableFromServerDesc": "Wenn dieser Haken gesetzt ist wird angenommen, dass WOL-Pakete, die vom Server aus gesendet werden, dieses Subnet erreichen k\u00f6nnen. Dazu muss der Router des Ziel-Netzes sog. \"Directed Broadcasts\" unterst\u00fctzen bzw. nicht filtern.",
     "lang_rebootAt": "Neustart um:",
     "lang_rebooting": "Neustart...",
+    "lang_saveWolAutoDiscover": "Auto-Erkennung ein\/ausschalten",
     "lang_settings": "Einstellungen",
     "lang_shutdown": "Herunterfahren",
     "lang_shutdownAt": "Herunterfahren um: ",
     "lang_status": "Status",
+    "lang_subnet": "Subnet",
+    "lang_subnets": "Subnets",
+    "lang_subnetsDescription": "Dies sind dem Satelliten-Server bekannte Subnetze. Damit WOL \u00fcber Subnet-Grenzen hinaus funktioniert, muss bekannt sein, in welche Netze \"Directed Broadcasts\" gesendet werden k\u00f6nnen, bzw. f\u00fcr welche Netze ein \"Sprung-Host\" existiert. Diese Liste wird sich automatisch f\u00fcllen, wenn Clients gestartet werden. Au\u00dferdem wird automatisch ermittelt, welche Netze mittels \"Directed Broadcasts\" erreichbar sind, sofern diese Funktion nicht oben unter \"Einstellungen\" deaktiviert wird.",
+    "lang_taskListIntro": "Hier sehen Sie eine Liste k\u00fcrzlich gestarteter Aufgaben, wie z.B. WOL-Aktionen, das Neustarten oder Herunterfahren von Clients, etc.",
     "lang_time": "Zeit",
     "lang_wakeScriptHelp": "Dieses Script wird auf dem Sprung-Host ausgef\u00fchrt, um den\/die gew\u00fcnschten Maschinen aufzuwecken. Es wird unter der Standard-Shell des oben angegebenen Benutzers ausgef\u00fchrt. Das Script kann zwei spezielle Platzhalter enthalten, die vor dem Ausf\u00fchren des Scripts vom Satellitenserver ersetzt werden: %MACS% ist eine durch Leerzeichen getrennte Liste von MAC-Adressen, die aufzuwecken sind. Das Tool \"wakeonlan\" unterst\u00fctzt direkt mehrere MAC-Adressen, sodass der Platzhalter %MACS% direkt als Kommandozeilenargument verwendet werden kann. Das Tool \"etherwake\" hingegen kann pro Aufruf immer nur einen Host aufwecken, weshalb eine for-Schleife notwendig ist. Au\u00dferdem wird der Platzhalter %IP% ersetzt, welcher je nach Ziel entweder \"255.255.255.255\" ist, oder bei einem netz\u00fcbergreifenden WOL-Paket die \"directed broadcast address\" des Zielnetzes. Netz\u00fcbergreifende WOL-Pakete werden vom \"etherwake\" nicht unterst\u00fctzt.",
     "lang_wakeupScript": "Aufweck-Script",
+    "lang_wolAutoDiscoverCheck": "WOL-Erreichbarkeit von Subnets automatisch ermitteln",
+    "lang_wolDiscoverDescription": "Ist diese Option aktiv, ermitteln Server und Clients automatisch, welche Netze von wo mittels WOL erreichbar sind.",
+    "lang_wolDiscoverHeading": "Automatische WOL-Ermittlung",
     "lang_wolReachability": "WOL-Erreichbarkeit"
 }
