--- a/modules-available/sysconfig/lang/en/messages.json
+++ b/modules-available/sysconfig/lang/en/messages.json
@@ -1,5 +1,5 @@
 {
-    "config-activated": "Configuration {{0}} has been activated",
+    "config-delete-error": "Database error: {{0}}",
     "config-deleted": "Deleted configuration {{0}}",
     "config-invalid": "Configuration with id {{0}} does not exist",
     "could-not-determine-binddn": "Could not determine bind dn ({{0}})",
@@ -9,7 +9,6 @@
     "module-added": "Module successfully added",
     "module-deleted": "Module {{0}} was deleted",
     "module-edited": "Module has been edited",
-    "module-in-use": "Module {{0}} is still used by Configuration {{1}}",
     "module-rebuild-failed": "Rebuilding module failed",
     "module-rebuilding": "Module is rebuilding...",
     "module-rebuilt": "Module was rebuilt",
