[rebootcontrol] Implement assigning subnets to jump host
Also fix removing all jump hosts from a subnet.
Update translations.

--- a/modules-available/rebootcontrol/lang/de/messages.json
+++ b/modules-available/rebootcontrol/lang/de/messages.json
@@ -1,16 +1,17 @@
 {
+    "invalid-cidr": "Ung\u00fcltige CIDR-Angabe: {{0}}",
     "invalid-ip-address": "Ung\u00fcltige IP-Adresse: {{0}}",
     "invalid-port": "Ung\u00fcltiger Port: {{0}}",
-    "invalid-subnet": "Ung\u00fcltiges Subnet: {{0}}",
+    "invalid-subnet": "Ung\u00fcltiges Subnetz: {{0}}",
     "jumphost-saved": "Sprung-Host {{0}} gespeichert",
     "no-clients-selected": "Keine Clients ausgew\u00e4hlt",
     "no-current-tasks": "Keine aktuellen oder k\u00fcrzlich abgeschlossenen Aufgaben",
     "no-such-jumphost": "Sprung-Host {{0}} existiert nicht",
     "no-such-task": "Task {{0}} existiert nicht",
     "some-machine-not-found": "Einige Clients aus dem POST request wurden nicht gefunden",
-    "subnet-already-exists": "Subnet existiert bereits",
-    "subnet-created": "Subnet angelegt",
-    "subnet-updated": "Subnet aktualisiert",
+    "subnet-already-exists": "Subnetz existiert bereits",
+    "subnet-created": "Subnetz angelegt",
+    "subnet-updated": "Subnetz aktualisiert",
     "unknown-task-type": "Unbekannter Task-Typ",
     "woldiscover-disabled": "Automatische WOL-Ermittlung deaktiviert",
     "woldiscover-enabled": "Automatische WOL-Ermittlung aktiviert"
