--- a/modules-available/rebootcontrol/lang/de/module.json
+++ b/modules-available/rebootcontrol/lang/de/module.json
@@ -1,4 +1,6 @@
 {
+    "jumphosts": "Sprung-Hosts",
     "module_name": "WakeOnLAN",
-    "page_title": "WakeOnLAN"
+    "page_title": "WakeOnLAN",
+    "subnets": "Subnetze"
 }
