--- a/modules-available/rebootcontrol/lang/de/template-tags.json
+++ b/modules-available/rebootcontrol/lang/de/template-tags.json
@@ -14,7 +14,11 @@
     "lang_connecting": "Verbinde...",
     "lang_editJumpHost": "Sprung-Host bearbeiten",
     "lang_editSubnet": "Subnetz bearbeiten",
+    "lang_enterCommand": "Auszuf\u00fchrende Befehle",
     "lang_error": "Nicht erreichbar",
+    "lang_execRemoteCommand": "Befehl auf Rechner(n) ausf\u00fchren",
+    "lang_executingRemotely": "F\u00fchre auf gew\u00e4hlten Clients aus...",
+    "lang_exitCode": "Exit Code",
     "lang_fixSubnetDesc": "Wenn aktiviert, wird die Erreichbarkeit f\u00fcr ideses Subnetz nicht mehr automatisch ermittelt. Sie k\u00f6nnen in diesem Fall selber festlegen, ob das Subnetz WOL-Pakete vom Satelliten-Server empfangen kann. Au\u00dferdem wird das Subnetz bei Setzen dieser Option nicht mehr automatisch aus der Datenbank gel\u00f6scht, wenn 6 Monate lang kein Client in diesem Subnetz gesehen wurde.",
     "lang_fixSubnetSettings": "Subnetz-Einstellungen manuell festlegen",
     "lang_genNew": "Neues Schl\u00fcsselpaar generieren",
@@ -46,11 +50,15 @@
     "lang_reachableFromServerDesc": "Wenn dieser Haken gesetzt ist wird angenommen, dass WOL-Pakete, die vom Server aus gesendet werden, dieses Subnetz erreichen k\u00f6nnen. Dazu muss der Router des Ziel-Netzes sog. \"Directed Broadcasts\" unterst\u00fctzen bzw. nicht filtern.",
     "lang_rebootAt": "Neustart um:",
     "lang_rebooting": "Neustart...",
+    "lang_remoteExec": "Ausf\u00fchren",
     "lang_saveWolAutoDiscover": "Auto-Erkennung ein\/ausschalten",
+    "lang_scriptOrCommand": "Befehl \/ Script",
     "lang_settings": "Einstellungen",
     "lang_shutdown": "Herunterfahren",
     "lang_shutdownAt": "Herunterfahren um: ",
     "lang_status": "Status",
+    "lang_stderr": "Standard-Error Ausgabe",
+    "lang_stdout": "Standard-Output Ausgabe",
     "lang_subnet": "Subnetz",
     "lang_subnets": "Subnetze",
     "lang_subnetsDescription": "Dies sind dem Satelliten-Server bekannte Subnetze. Damit WOL \u00fcber Subnetz-Grenzen hinaus funktioniert, muss bekannt sein, in welche Netze \"Directed Broadcasts\" gesendet werden k\u00f6nnen, bzw. f\u00fcr welche Netze ein \"Sprung-Host\" existiert. Diese Liste wird sich automatisch f\u00fcllen, wenn Clients gestartet werden. Au\u00dferdem wird automatisch ermittelt, welche Netze mittels \"Directed Broadcasts\" erreichbar sind, sofern diese Funktion nicht oben unter \"Einstellungen\" deaktiviert wird.",
