--- a/modules-available/roomplanner/lang/de/template-tags.json
+++ b/modules-available/roomplanner/lang/de/template-tags.json
@@ -17,16 +17,22 @@
     "lang_classroomdeskchair": "Klassenzimmertisch mit Stuhl",
     "lang_classroomtable": "Klassenzimmertisch",
     "lang_coatrack": "Garderobe",
+    "lang_composedLayout": "Zusammengesetztes Layout",
     "lang_conferencetable": "Konferenztisch",
     "lang_confirmDiscardChanges": "Wollen Sie alle \u00c4nderungen verwerfen?",
+    "lang_controlRoomDesc": "Dies ist der Raum, dessen PVS-Manager bei logischer Zusammenlegung der Unterr\u00e4ume der kontrollierende PVS-Manager sein wird.",
+    "lang_controllingRoom": "Kontrollierender Raum",
     "lang_couch": "Couch",
     "lang_dedicatedManager": "Exklusiv",
     "lang_descriptionBySearch": "Hier k\u00f6nnen aus der Liste aller bekannter Rechner suchen.",
     "lang_descriptionBySubnet": "Hier sehen Sie Computer, die sich in den zum Raum geh\u00f6renden Subnetzen befinden.",
     "lang_deskLamp": "Tischlampe",
     "lang_door": "T\u00fcr",
+    "lang_editComposedRoom": "Zusammengesetzten Raum bearbeiten",
+    "lang_exposeAsComposedRoom": "Als zusammengesetzten Raum im PVS-Manager anbieten",
     "lang_flatscreen": "Flatscreeen",
     "lang_greenchair": "Gr\u00fcner Stuhl",
+    "lang_horizontal": "Horizontal",
     "lang_labelBySearch": "Alle Rechner",
     "lang_labelBySubnet": "Rechner im Subnetz",
     "lang_lecturetheaterrow": "Stuhlreihe",
@@ -53,5 +59,6 @@
     "lang_titleAddMachine": "Rechner hinzuf\u00fcgen",
     "lang_titleBySearch": "Suche",
     "lang_titleBySubnet": "Subnetz",
+    "lang_vertical": "Vertikal",
     "lang_wastecan": "M\u00fclleimer"
 }
