[minilinux] Tweak design of version list

--- a/modules-available/minilinux/lang/de/template-tags.json
+++ b/modules-available/minilinux/lang/de/template-tags.json
@@ -2,6 +2,7 @@
     "lang_branchesHeading": "Verf\u00fcgbare Varianten und Versionen",
     "lang_changelog": "Changelog",
     "lang_confirmDeleteVersion": "Diese Version wirklich l\u00f6schen?",
+    "lang_default": "Standard",
     "lang_download": "Herunterladen",
     "lang_id": "ID",
     "lang_installed": "Installiert",
