[backup] Update translations (dozmod -> suite)

--- a/modules-available/backup/lang/de/template-tags.json
+++ b/modules-available/backup/lang/de/template-tags.json
@@ -4,13 +4,13 @@
     "lang_backupRestore": "Sichern und Wiederherstellen",
     "lang_browseForFile": "Durchsuchen",
     "lang_download": "Herunterladen",
-    "lang_dozmodExplanation": "Die Datenbank des Dozentenmoduls wiederherstellen. Dazu geh\u00f6ren die Metadaten der Virtuellen Maschinen, die Veranstaltungen, etc. Bitte beachten Sie, dass hierzu auf dem konfigurierten VM-Store die passenden VM-Abbilder vorliegen m\u00fcssen, da diese extern gespeichert werden. Wenn sich der Servername oder die -adresse ge\u00e4ndert haben stellen Sie bitte sicher, dass die relativen Pfade innerhalb des Netzlaufwerks gleich geblieben sind. Ansonsten werden die wiederhergestellten VMs nicht verwendbar sein.",
+    "lang_dozmodExplanation": "Die Datenbank der bwLehrpool-Suite wiederherstellen. Dazu geh\u00f6ren die Metadaten der Virtuellen Maschinen, die Veranstaltungen, etc. Bitte beachten Sie, dass hierzu auf dem konfigurierten VM-Store die passenden VM-Abbilder vorliegen m\u00fcssen, da diese extern gespeichert werden. Wenn sich der Servername oder die -adresse ge\u00e4ndert haben stellen Sie bitte sicher, dass die relativen Pfade innerhalb des Netzlaufwerks gleich geblieben sind. Ansonsten werden die wiederhergestellten VMs nicht verwendbar sein.",
     "lang_lastBackup": "Letzte Sicherung",
     "lang_reboot": "Systemneustart",
     "lang_restore": "Hochladen",
     "lang_restoreConfig": "Konfiguration wiederherstellen",
     "lang_restoreDescription": "Hier k\u00f6nnen Sie ein Backup der Konfiguration wieder einspielen. Bitte beachten Sie, dass der Server dabei neu gestartet wird, daher sollten Sie dies m\u00f6glichst durchf\u00fchren, wenn das System nicht genutzt wird, und keine Dozenten Veranstaltungen oder Virtuelle Labore erstellen oder hoch-\/herunterladen. Bitte beachten Sie, dass dabei auch das urspr\u00fcngliche Passwort der Weboberfl\u00e4che wiederhergestellt wird.",
-    "lang_restoreDozmodConfig": "Dozentenmodul-Konfiguration wiederherstellen",
+    "lang_restoreDozmodConfig": "bwLehrpool-Suite-Konfiguration wiederherstellen",
     "lang_restoreFailed": "Wiederherstellung der Konfiguration fehlgeschlagen.",
     "lang_restoreSystemConfig": "Systemkonfiguration wiederherstellen",
     "lang_selectFile": "Bitte w\u00e4hlen Sie ein Backup-Archiv",
