--- a/modules-available/backup/lang/en/template-tags.json
+++ b/modules-available/backup/lang/en/template-tags.json
@@ -4,13 +4,13 @@
     "lang_backupRestore": "Backup and Restore",
     "lang_browseForFile": "Browse",
     "lang_download": "Download",
-    "lang_dozmodExplanation": "This restores all the virtual machine and lecture meta data created using the \"Dozentenmodul\". Please make sure the VM-storage configured still contains all the VM-Images associated with the virtual machines. If the location of the storage changed, make sure the relative pathes on the share are still the same, otherwise the virtual machines won't be usable.",
+    "lang_dozmodExplanation": "This restores all the virtual machine and lecture meta data created using the bwLehrpool-Suite. Please make sure the VM-storage configured still contains all the VM-Images associated with the virtual machines. If the location of the storage changed, make sure the relative pathes on the share are still the same, otherwise the virtual machines won't be usable.",
     "lang_lastBackup": "Last backup",
     "lang_reboot": "System reboot",
     "lang_restore": "Upload",
     "lang_restoreConfig": "Restore config",
     "lang_restoreDescription": "Here you can restore a configuration backup. Please note that this will reboot the server, so it is advised to do this while nobody is using the system. Please note that this will also restore the password for the web interface that was active when the configuration backup was created.",
-    "lang_restoreDozmodConfig": "Restore Dozentenmodul config",
+    "lang_restoreDozmodConfig": "Restore bwLehrpool-Suite config",
     "lang_restoreFailed": "Restoring configuration failed.",
     "lang_restoreSystemConfig": "Restore system config",
     "lang_selectFile": "Please select a backup archive",
