--- a/modules-available/backup/lang/en/template-tags.json
+++ b/modules-available/backup/lang/en/template-tags.json
@@ -4,7 +4,7 @@
     "lang_backupRestore": "Backup and Restore",
     "lang_browseForFile": "Browse",
     "lang_download": "Download",
-    "lang_dozmodExplanation": "This restores all the virtual machine and lecture meta data created using the bwLehrpool-Suite. Please make sure the VM-storage configured still contains all the VM-Images associated with the virtual machines. If the location of the storage changed, make sure the relative pathes on the share are still the same, otherwise the virtual machines won't be usable.",
+    "lang_dozmodExplanation": "This restores all the virtual machine and lecture meta data created using the bwLehrpool-Suite. Please make sure the VM-storage configured still contains all the VM-Images associated with the virtual machines. If the location of the storage changed, make sure the relative paths on the share are still the same, otherwise the virtual machines won't be usable.",
     "lang_lastBackup": "Last backup",
     "lang_reboot": "System reboot",
     "lang_restore": "Upload",
